tests/parser/validinput/constructorNewLines.idp

vocabulary V {
    
   	type A constructed from {
        C
    ,d
    
    
    ,e
    
    ,f}

}
 

