tests/parser/invalidinput/parseerror3.idp
vocabulary V{
	type X
	type X
}